twitter and facebook urls added and fixed font of band list on mobile screen

--- a/dsadng-HTML5-Template/assets/css/demos/demo-DSA.css
+++ b/dsadng-HTML5-Template/assets/css/demos/demo-DSA.css
@@ -234,6 +234,22 @@ This stylesheet is used for demo 6
 }
 
 @media(max-width: 768px){
+
+  .dsa-fontLarge {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+
+  .dsa-fontMedium {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+
+  .dsa-fontSmall {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+
   .section-title .family-display{
     font-size: 50px; 
   }
@@ -253,7 +269,22 @@ This stylesheet is used for demo 6
   }
 }
 
-@media(max-width: 420px){
+@media(max-width: 420px) {
+
+  .dsa-fontLarge {
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+  }
+
+  .dsa-fontMedium {
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+  }
+
+  .dsa-fontSmall {
+    font-size: 1.1rem;
+    line-height: 1.1rem;
+  }
 
   .section-title .family-display{
     font-size: 40px;
